welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:5: error: value update is not a member of Boolean
	if (estFaceMur()=true){
            ^